# itparty2026

./: .gitignore  README.md  package-lock.json  run_docker.bat
server/: .env  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
server/alembic/versions/: 0ed101e187dd_upd.py  22917865e690_make_last_payment_date_nullable.py  2b05f235577e_upd_subscriptions_table.py  4b8f0f3b2a61_add_responsible_class_to_users.py  7f2b1f4c8a10_add_event_environment_fields.py  818ffff115bd_create_subscriptions_table.py  840826748dd7_upd2.py  9c8b7a6d5e4f_merge_roadmap_and_user_heads.py  a9c4d4b8f001_hierarchical_roles_access_rework.py  b1d9acdc8db4_upd5.py  b52dafe3c002_add_export_parity_models.py  ba44e69230e4_add_is_admin_column_to_users.py  c3f91a61e8f4_add_roadmap_service_models.py  c6165bbed3bf_upd.py  c6301141fe3c_upd9_subscriptions_table.py  d45b88a0f9c1_extend_events_for_roadmap_admin_ui.py  d7a44c8e1f20_merge_staff_profile_into_users.py  e0be2fc553d4_sync_with_existing_schema.py  e1c6b6b0b7f2_add_average_percent_to_students.py  e4b61836dcca_make_last_payment_date_nullable.py
server/src/: main.py
server/src/api/: __init__.py  deps.py  http_headers.py
server/src/api/admin/: __init__.py  endpoints.py  router.py
server/src/api/auth/: __init__.py  endpoints.py  router.py
server/src/api/edu/: __init__.py  endpoints.py  router.py
server/src/api/me/: __init__.py  (+1 more)
server/src/auth/: auth.py  token.py
server/src/core/: config.py
server/src/db/: __init__.py
server/src/services/: __init__.py  project_analysis_export.py  roadmap_export.py  roadmap_generator.py
(+97 files in other folders)
