[project]
name = "itparty2026api"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksei-Kutuzov",email = "alekseikutuzov2@yandex.com"}
]
requires-python = ">=3.13"
dependencies = [
    "python-docx (>=1.2.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
